<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btMeDirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_MapDirect"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btMeShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_LessonStore"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btMeCoach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_coachInfo"
        android:textColor="@color/black" />
</LinearLayout>