<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="287dp"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtMeShoppingSearch"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/item_corner_round"
        android:ems="10"
        android:hint="@string/meSearchViewLessonName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ExpandableListView
        android:id="@+id/elvMeShopping"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:childDivider="#80FF0000"
        android:divider="#800000FF"
        android:groupIndicator="@null"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

    </ExpandableListView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="552dp" />

    <Button
        android:id="@+id/btnMeShoppingCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/btBuAddNotiCancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnMeShoppingConfirm"
        app:layout_constraintEnd_toStartOf="@+id/btnMeShoppingConfirm"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnMeShoppingConfirm"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnMeShoppingConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTextConfirm"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elvMeShopping" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="clip_vertical"
        android:text="@string/meDialogDetailSearch"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/edtMeShoppingSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/meDialogDetailKindSearch"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/elvMeShopping"
        app:layout_constraintEnd_toEndOf="@+id/edtMeShoppingSearch"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/edtMeShoppingSearch" />


</androidx.constraintlayout.widget.ConstraintLayout>